finsihed product through sprint 2

--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
       <div class="row">
       <div class="col-md-10 col-md-offset-1">
 
-        <form class="form-horizontal">
+        <form id="formy" class="form-horizontal" method="post" action="/api/albums">
           <fieldset>
 
             <!-- Form Name -->
